<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Сканер ШК</string>
    <string name="LoginBtn"><b>Авторизоваться</b>\n<font face="Arial" size="15">\nПоднесите личную карту к устройству</font></string>
    <string name="ScanBtn"><b>Сканировать</b>\n<font face="Arial" size="15">\nСканировать форму 1-Т</font></string>
    <string name="getKPP"><b>Выбрать автопроезд</b>\n<font face="Arial" size="15">\nИз списка</font></string>
    <string name="ExitBtn"><b>Выход</b>\n<font face="Arial" size="15">\nВыход из программы</font></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Доступ</string>
    <string name="title_activity_net_error">Ошибка сети</string>
    <string name="title_activity_login_error">Ошибка авторизации</string>
    <string name="scan_from_fragment">Scan from fragment</string>
    <string name="title_activity_kpp">Выбор автопроезда</string>
    <string name="title_activity_tone_form">TOneForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_enter_code">EnterCode</string>
    <string name="title_activity_item_info">ItemInfo</string>
    <string name="barCode">Штрихкод</string>
    <string name="Nm">Наименование ТМЦ</string>
    <string name="PartNum">Номер части</string>
    <string name="PackNum">Номер пачки</string>
    <string name="Weight">Вес</string>
    <string name="PlavkN">Номер плавки</string>
    <string name="title_activity_set_t1">SetT1</string>
    <string name="title_activity_result_t1">ResultT1</string>
    <string name="no_all_item">Имеются необработанные коды</string>
    <string name="incorrect_item">Имеются коды отсутствующие в 1-Т</string>
    <string name="all_ok_item">Все ТМЦ успешно отсканированы</string>
    <string name="title_activity_empty1_t">empty1T</string>

</resources>
